--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,5 +9,7 @@ services:
         INSTALL_DEV: true
     volumes:
       - ./tests:/app/tests
+      - ./api:/app/api
+      - ./metrics:/app/metrics
     # command: pytest
     command: pytest -s
