--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,11 @@ services:
   api:
     build: .
     restart: unless-stopped
+    # env_file:
+    #   - .env
     ports:
       - 8001:80
     volumes:
-      - ./api:/app/api
       - ./metrics:/app/metrics
     command: /start-reload.sh
+    # command: uvicorn main:app --host 0.0.0.0 --port 8000
