--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST_URL="https://metrics.api.fair-enough.semanticscience.org"
+HOST_URL="https://w3id.org/fair-enough/metrics"
 CONTACT_URL="https://github.com/MaastrichtU-IDS/fair-enough-metrics"
 CONTACT_NAME="Vincent Emonet"
 CONTACT_EMAIL="vincent.emonet@gmail.com"
