add tests and upgrade to fair-test 0.0.4

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,4 +11,6 @@ services:
       - ./tests:/app/tests
       - ./metrics:/app/metrics
     # command: pytest
+    # environment:
+    #   - DEBUG=true
     command: pytest -s
