add duckduckgo search

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 PyShEx
 PyYAML
-googlesearch-python
+duckduckgo-search
+# googlesearch-python
 fair-test@git+https://github.com/MaastrichtU-IDS/fair-test@main
 # fair-test>=0.0.4
