add metrics tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ duckduckgo-search
 # googlesearch-python
 fair-test@git+https://github.com/MaastrichtU-IDS/fair-test@main
 # fair-test>=0.0.4
+IDUtils
