add support for DOIs and handles

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ PyShEx
 fair-test@git+https://github.com/MaastrichtU-IDS/fair-test@main
 # fair-test>=0.0.4
 PyYAML
-IDUtils
+idutils
 # duckduckgo-search
 pyshacl
