--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ test = [
     "flake8 >=3.8.3,<6.0.0",
     "Flake8-pyproject>=1.1.0.post0",
     "autoflake >=1.4.0,<2.0.0",
+    "httpx",
 ]
 dev = [
     "pre-commit >=2.17.0,<3.0.0",
